# URL_Shortener

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/core/: config.py  utils.py
src/db/: models.py  session.py
src/db/managers/: url_manager.py
src/routers/: redirect_routes.py
src/routers/v1/: url_routes.py
src/schemas/: url.py
src/services/: url_service.py
